Added Models classes and page

--- a/CarGarage/WebContent/index.xhtml
+++ b/CarGarage/WebContent/index.xhtml
@@ -18,7 +18,7 @@
     		
     		<h:link value="Manage manufacturers " outcome="manage_manufacturers" />
     		<br/>
-    		<h:link value="Manage Models" outcome="addStudent" />
+    		<h:link value="Manage Models" outcome="manage_models" />
     		<br/>
     		<h:link value="Manage Vehicles" outcome="addStudent" />
     		<br/>
