--- a/CarGarage/WebContent/index.xhtml
+++ b/CarGarage/WebContent/index.xhtml
@@ -2,8 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+		  xmlns:h="http://xmlns.jcp.org/jsf/html"
+		  xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+	  	  xmlns:f="http://xmlns.jcp.org/jsf/core"
       >
     <h:head>
     <title>Car Garage Database</title>
@@ -22,7 +23,7 @@
     		<br/>
     		<h:link value="Manage Vehicles" outcome="manage_vehicles" />
     		<br/>
-    		<h:link value="Find Cars" outcome="addStudent" />
+    		<h:link value="Find Cars" outcome="add_manufacturer" />
     
 
 			
