--- a/CarGarage/WebContent/manage_manufacturers.xhtml
+++ b/CarGarage/WebContent/manage_manufacturers.xhtml
@@ -2,8 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+		  xmlns:h="http://xmlns.jcp.org/jsf/html"
+		  xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+	  	  xmlns:f="http://xmlns.jcp.org/jsf/core"
       >
     <h:head>
     <title>Manufacturers</title>
@@ -12,7 +13,7 @@
 
     <h:body>
     	<h1>Manufacturers</h1>
-		<h:button value="Add Manufacturer" outcome="addStudent" />
+		<h:button value="Add Manufacturer" outcome="add_manufacturer" />
  		<h:dataTable value="#{manufacturerController.loadManufacturers()}" var="s"
     			styleClass="order-table"
     			headerClass="order-table-header"
