--- a/CarGarage/WebContent/manage_models.xhtml
+++ b/CarGarage/WebContent/manage_models.xhtml
@@ -2,8 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+		  xmlns:h="http://xmlns.jcp.org/jsf/html"
+		  xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+	  	  xmlns:f="http://xmlns.jcp.org/jsf/core"
       >
     <h:head>
     <title>Models</title>
@@ -19,7 +20,6 @@
     			rowClasses="order-table-odd-row,order-table-even-row"
     		>
     	
-
     		<h:column>
     			<f:facet name="header">
     				Manufacturer Code
