--- a/CarGarage/WebContent/manage_vehicles.xhtml
+++ b/CarGarage/WebContent/manage_vehicles.xhtml
@@ -2,8 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
+		  xmlns:h="http://xmlns.jcp.org/jsf/html"
+		  xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
+	  	  xmlns:f="http://xmlns.jcp.org/jsf/core"
       >
     <h:head>
     <title>Vehicles</title>
@@ -68,7 +69,16 @@
     			<f:facet name="header">
     				Action
 				</f:facet>
-    				<h:link value="All Details" outcome="manage_manufacturers" />
+    				<h:commandButton id="submit" 
+					   value="All Details" action="#{vehicleController.showDetails}">
+					   <f:param name="Reg" value="#{v.reg}" />
+					   <f:param name="Manu_Code" value="#{v.manu_code}" />
+					   <f:param name="Model_Code" value="#{v.model_code}" />
+					   <f:param name="Mileage" value="#{v.mileage}" />
+					   <f:param name="Price" value="#{v.price}	" />
+					   <f:param name="Colour" value="#{v.colour}	" />
+					   <f:param name="Fuel" value="#{v.fuel}" />
+					</h:commandButton>
     		<br/>
     		
     		</h:column>
