--- a/CarGarage/WebContent/manage_models.xhtml
+++ b/CarGarage/WebContent/manage_models.xhtml
@@ -13,7 +13,7 @@
 
     <h:body>
     	<h1>Models</h1>
-		<h:button value="Add Model" outcome="addStudent" />
+		<h:button value="Add Model" outcome="add_model" />
  		<h:dataTable value="#{modelController.loadModels()}" var="s"
     			styleClass="order-table"
     			headerClass="order-table-header"
