Add Vehicle Page

--- a/CarGarage/WebContent/manage_vehicles.xhtml
+++ b/CarGarage/WebContent/manage_vehicles.xhtml
@@ -13,7 +13,7 @@
 
     <h:body>
     	<h1>Vehicles</h1>
-		<h:button value="Add Vehicle" outcome="addStudent" />
+		<h:button value="Add Vehicle" outcome="add_vehicle" />
  		<h:dataTable value="#{vehicleController.loadVehicles()}" var="v"
     			styleClass="order-table"
     			headerClass="order-table-header"
