--- a/CarGarage/WebContent/manage_vehicles.xhtml
+++ b/CarGarage/WebContent/manage_vehicles.xhtml
@@ -70,7 +70,7 @@
     				Action
 				</f:facet>
     				<h:commandButton id="submit" 
-					   value="All Details" action="#{vehicleController.showDetails}">
+					   value="All Details" action="#{vehicleController.showDetails(v)}">
 					   <f:param name="Reg" value="#{v.reg}" />
 					   <f:param name="Manu_Code" value="#{v.manu_code}" />
 					   <f:param name="Model_Code" value="#{v.model_code}" />
