Added remaining project files
Need to clean up all the .metaData files and remove them with gitignore

--- a/CarGarage/WebContent/update_manufacturer.xhtml
+++ b/CarGarage/WebContent/update_manufacturer.xhtml
@@ -6,12 +6,12 @@
 	  	  xmlns:f="http://xmlns.jcp.org/jsf/core"
       >
 <h:head>
-    <title>Garage - Add Manufacturer</title>
+    <title>Garage - Update Manufacturer</title>
     
    
 </h:head>
 <h:body>
- <h1>Search for vehicles</h1>
+ <h1>Update vehicle</h1>
  		<!-- Show SQL error if any, when user causing exception -->
 		<h:messages globalOnly="true" style="color: red"/>
 		<h:form>
