--- a/CarGarage/WebContent/vehicleDetails.xhtml
+++ b/CarGarage/WebContent/vehicleDetails.xhtml
@@ -13,6 +13,7 @@
     
     
     <h:body>
+    <title> Vehicles Details</title>
       <h:form>	
 			Registration: #{vehicleController.reg} <br />
 		
