--- a/CarGarage/WebContent/find_vehicles.xhtml
+++ b/CarGarage/WebContent/find_vehicles.xhtml
@@ -10,7 +10,7 @@
 		<f:event listener="#{manufacturerController.loadManufacturers()}"
 			type="preRenderView" />
 	</f:metadata>
-    <title>Manufacturers</title>
+    <title>Find Vehicles</title>
     
     
     <h:outputStylesheet library="css" name="style.css"  />
@@ -18,6 +18,7 @@
     </h:head>
 
     <h:body>
+    <h1>Find Vehicles</h1>
     	<h:form>
 		<h:messages styleClass="errorMessage" globalOnly="true" />
 		<h:message for="price" styleClass="errorMessage" />
